Fix responsive nav cutoffs

--- a/app/assets/stylesheets/pages/homepage.scss
+++ b/app/assets/stylesheets/pages/homepage.scss
@@ -8,44 +8,6 @@
   overflow: hidden;
 }
 
-// Navigation
-
-.mlts-nav {
-  background: $dark-blue !important;
-  font-size: 15px !important;
-  a {
-    font-family: $sans-light !important;
-    color: white !important;
-    @extend .transition;
-    &:hover {
-      opacity: 0.7 !important;
-    }
-  }
-}
-
-.icon-home {
-  font-size: 2em !important;
-  padding-top: 10px !important;
-}
-
-.navbar-brand {
-  margin-left: 0px !important;
-}
-
-.navbar-right {
-  margin-right: 0px !important;
-}
-.separator:before{
-  content: '\00B7';
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: -0.5em;
-  margin: auto;
-  height: 1.5em;
-  font-size: 30px;
-}
-
 // Social Follow Buttons
 .social-follow-buttons{
   text-align: center;
@@ -76,8 +38,6 @@
     opacity: 1;
   }
 }
-
-
 
 // Main Header
 .main-header{
@@ -159,12 +119,6 @@
   &.active {
     display: block;
   }
-}
-
-.header-nav{
-  font-size: 0;
-  font-family: $sans-light;
-  display: inline-block;
 }
 
 .trailer-items{
@@ -282,7 +236,6 @@
     min-height: 155px;
   }
 }
-
 
 // Carousel
 .hero-control{
@@ -570,34 +523,6 @@ a.mlts-blue {
   width: 100%;
   height: 100%;
   z-index: 200;
-}
-
-// Footer
-.main-footer{
-  padding-bottom: 1em;
-  padding-top: 1em;
-  text-align: center;
-  color: $text-grey;
-  background-color: $form-grey;
-  margin-top: -3px;
-
-  @include smaller-than(large){
-    .nav-items{
-      margin: 0.2em 0;
-      display: block;
-      float: none;
-    }
-  }
-}
-
-.footer-nav-links{
-  text-align: center;
-  @include larger-than(extra-large) {
-    li {
-      display: inline-block;
-      padding: 0 10px;
-    }
-  }
 }
 
 // Host a screening section
